--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,57 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".ui.detail.DetailFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_detail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
+        <variable
+            name="detail"
+            type="com.miqdad.noteapp.ui.detail.DetailFragmentArgs" />
+    </data>
 
-    <TextView
-        android:id="@+id/tv_title_detail"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:text="ALSALSKDFN ASKLDFSDFLKN ALKSDN"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_detail" />
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        tools:context=".ui.detail.DetailFragment">
 
-    <TextView
-        android:id="@+id/tv_date_detail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:text="17 Februari 2022"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_detail" />
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_date_detail">
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_description_detail"
+            android:id="@+id/tv_title_detail"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget panjang banget "
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:paddingStart="8dp"
-            android:textSize="16sp"
-            android:paddingBottom="60dp"
-            android:textColor="@color/dark_gray"
-            android:paddingEnd="8dp" />
-    </androidx.core.widget.NestedScrollView>
+            android:paddingEnd="8dp"
+            android:text="@{detail.notes.title}"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_detail" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_date_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="@{detail.notes.date}"
+            app:layout_constraintTop_toBottomOf="@id/tv_title_detail" />
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_date_detail">
+
+            <TextView
+                android:id="@+id/tv_description_detail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@{detail.notes.desc}"
+                android:paddingStart="8dp"
+                android:textSize="16sp"
+                android:paddingBottom="60dp"
+                android:textColor="@color/dark_gray"
+                android:paddingEnd="8dp" />
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
